Add CI workflow and update formatting scripts

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "scripts": {
         "build": "next build",
         "dev": "next dev",
-        "prettier": "prettier --write --ignore-unknown .",
-        "prettier:check": "prettier --check --ignore-unknown .",
+        "format": "prettier --write --ignore-unknown .",
+        "format:check": "prettier --check --ignore-unknown .",
         "start": "next start",
         "lint": "next lint"
     },
